--- a/references.bib
+++ b/references.bib
@@ -3535,3 +3535,145 @@
 	note = {[Online; accessed 5. Jan. 2025]},
 	url = {https://code.visualstudio.com}
 }
+
+@article{gupte2019,
+  title={Sex differences in traumatic brain injury: what we know and what we should know},
+  author={Gupte, Raeesa P and Brooks, William M and Vukas, Rachel R and Pierce, Janet D and Harris, Janna L},
+  journal={Journal of neurotrauma},
+  volume={36},
+  number={22},
+  pages={3063--3091},
+  year={2019},
+  publisher={Mary Ann Liebert, Inc., publishers 140 Huguenot Street, 3rd Floor New~…}
+}
+
+@misc{icddata2025,
+	title = {{ Amnestic disorder due to known physiological condition F04 }},
+	author = {{ICD10Data.com}},
+	year = {2025},
+	month = jan,
+	note = {[Online; accessed 6. Jan. 2025]},
+	url = {https://www.icd10data.com/ICD10CM/Codes/F01-F99/F01-F09/F04-}
+}
+
+@article{mollayeva2018,
+  title={Traumatic brain injury: sex, gender and intersecting vulnerabilities},
+  author={Mollayeva, Tatyana and Mollayeva, Shirin and Colantonio, Angela},
+  journal={Nature Reviews Neurology},
+  volume={14},
+  number={12},
+  pages={711--722},
+  year={2018},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{bruns2003,
+  title={The epidemiology of traumatic brain injury: a review},
+  author={Bruns Jr, John and Hauser, W Allen},
+  journal={Epilepsia},
+  volume={44},
+  pages={2--10},
+  year={2003},
+  publisher={Wiley Online Library}
+}
+
+@unpublished{jirak2025,
+  title = {{Organicky podmíněné duševní poruchy}},
+  author = {Jirák, Roman},
+  institution = {Charles University},
+  year = {2025},
+	note = {[Online; accessed 6. Jan. 2025]},
+	url = {https://psychiatrie.lf1.cuni.cz/file/6208/03-organicky-podminene-dusevni-poruchy.pdf}
+}
+
+@article{whitley2006,
+  title={Herpes simplex encephalitis: adolescents and adults},
+  author={Whitley, Richard J},
+  journal={Antiviral research},
+  volume={71},
+  number={2-3},
+  pages={141--148},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{sedlacek2004,
+  title = {Herpetická encefalitida},
+  author = {Sedláček, Dalibor and Štruncová, Věra and Pizingerová, Kateřina and Švecová, Mirka and Chudáček, Zdeněk and Amblerová, Věra},
+  journal = {Pediatrie pro praxi},
+  volume={5},
+  pages={226--230},
+  year={2004},
+  publisher={Solen}
+}
+
+@article{anderson2010,
+  title={Cognitive sequelae of hypoxic-ischemic brain injury: a review},
+  author={Anderson, C Alan and Arciniegas, David B},
+  journal={NeuroRehabilitation},
+  volume={26},
+  number={1},
+  pages={47--63},
+  year={2010},
+  publisher={IOS Press}
+}
+
+@misc{melicharova2025,
+  author = {Melicharová, Hana},
+  date = {2025-01-09},
+  howpublished = {Personal email communication}
+}
+
+@article{bandelow2015,
+  title={Epidemiology of anxiety disorders in the 21st century},
+  author={Bandelow, Borwin and Michaelis, Sophie},
+  journal={Dialogues in clinical neuroscience},
+  volume={17},
+  number={3},
+  pages={327--335},
+  year={2015},
+  publisher={Taylor \& Francis}
+}
+
+@article{deture2019,
+  title={The neuropathological diagnosis of Alzheimer’s disease},
+  author={DeTure, Michael A and Dickson, Dennis W},
+  journal={Molecular neurodegeneration},
+  volume={14},
+  number={1},
+  pages={32},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{messias2007,
+  title={Epidemiology of schizophrenia: review of findings and myths},
+  author={Messias, Erick L and Chen, Chuan-Yu and Eaton, William W},
+  journal={Psychiatric Clinics of North America},
+  volume={30},
+  number={3},
+  pages={323--338},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@article{tandon2024,
+  title={The schizophrenia syndrome, circa 2024: What we know and how that informs its nature},
+  author={Tandon, Rajiv and Nasrallah, Henry and Akbarian, Schahram and Carpenter Jr, William T and DeLisi, Lynn E and Gaebel, Wolfgang and Green, Michael F and Gur, Raquel E and Heckers, Stephan and Kane, John M and others},
+  journal={Schizophrenia research},
+  volume={264},
+  pages={1--28},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@article{chang2011,
+  title={Life expectancy at birth for people with serious mental illness and other major disorders from a secondary mental health care case register in London},
+  author={Chang, Chin-Kuo and Hayes, Richard D and Perera, Gayan and Broadbent, Mathew TM and Fernandes, Andrea C and Lee, William E and Hotopf, Mathew and Stewart, Robert},
+  journal={PloS one},
+  volume={6},
+  number={5},
+  pages={e19590},
+  year={2011},
+  publisher={Public Library of Science San Francisco, USA}
+}
