--- a/goals.Rmd
+++ b/goals.Rmd
@@ -10,7 +10,18 @@ The primary aim of this doctoral project was to develop an original interactive 
 
 ## User profile
 
-A key first step in designing any kind of system is understanding the target user's characteristics, including their expertise, motivations, and goals. This is particularly relevant in interactive data visualization systems, which, as was discussed in Section \@ref(litreview), serve a diverse range of users. At one end of the spectrum, some interactive data visualization systems are designed with fairly minimal expectations of the user's level of experience and motivation. Conversely, other systems assume a highly motivated "expert" users with a sufficient level of domain expertise [@dimara2019] or the ability to contend with low-level execution details such as rendering or reactive event graph [@satyanarayan2015; @satyanarayan2016].
+A key first step in designing any kind of system is understanding the target user. This is especially the case in interactive data visualization systems, which cater to a diverse range of users (see Section \@ref(litreview)). When users build interactive data visualizations, they may differ in what they want, how much they know, and how far are they willing to   
+
+. Understanding these characteristics is crucial.
+
+First, there is the issue of what the user actually wants from the interactive visualizations. Users may also approach the visualization system with different goals and needs. @ward2015 identified the following list of common goals that users may have when creating interactive visualizations:
+
+- Exploration: The user wants to examine a data set
+- Confirmation: The user wants to verify a fact or a hypothesis
+- Presentation: The user wants to make some point with the visualization 
+- Interactive presentation: The user wants to guide the audience through a series of insights
+
+Second, there is the experience level and motivation of the user. At one end of the spectrum, some interactive data visualization systems are designed with fairly minimal expectations of the user's level of experience or motivation. Conversely, other systems assume a highly motivated "expert" users with a sufficient level of domain expertise [@dimara2019] or the ability to contend with low-level execution details such as rendering or reactive event graph [@satyanarayan2015; @satyanarayan2016]. 
 
 The goal was to design a package for interactive data exploration that would be accessible to a wide range of R users. Specifically, I wanted to give novice users the ability to quickly create comprehensive interactive figures they could use to explore their data, while, at the same time, allowing more advanced users to take advantage of the full range of features and engage in deeper customization. This informed the design of the package, leading to the prioritization of several key features: a simple and intuitive application programming interface with sensible defaults, an intuitive user interface, and a robust set of built-in interactive features.
 
@@ -18,25 +29,32 @@ The goal was to design a package for interactive data exploration that would be 
 
 To make the package accessible to a wide range of R users, a key concern was designing a simple and intuitive application programming interface ([API]). Specifically, I wanted to make it easy for the average user to learn the package and produce fairly complete and useful interactive figures, with only few lines of R code. Ideally, the package should empower even users with limited programming experience to take advantage of interactive graphics.
 
-Achieving this level of accessibility required several design choices. First, the interface had to be simple and easy to learn, which was accomplished by drawing inspiration from established packages. Specifically, the main inspirations for the `plotscaper` API were the popular `ggplot2` package [@wickham2016], as well as the `iplots` package [@urbanek2003; @urbanek2011]. However, `plotscaper`'s design goals also necessitated some deviations from these packages' APIs, see Section \@ref(system). Second, to further simplify the API, many of the components such as scales had to be given sensible defaults. Conversely, this also meant that extensive customizability was not a primary concern: the goal was to empower the users to start exploring their data quickly, rather than spend time making fine-grained adjustments to their figures. Third, to broaden its appeal, the package had to integrate seamlessly with existing tools within the R ecosystem. These include the popular RStudio [IDE] [@rstudio2024] and the RMarkdown document-authoring system [@xie2018].    
+Achieving this level of accessibility required several design choices. First, the API had to be simple and easy to learn. I tried to accomplish this by drawing inspiration from established packages. Specifically, the main inspirations for the `plotscaper` API were the popular `ggplot2` package [@wickham2016], as well as the `iplots` package [@urbanek2003; @urbanek2011]. However, `plotscaper`'s design goals also necessitated some deviations from these packages' APIs, see Section \@ref(system). Second, to further simplify the API, many of the components such as scales had to be given sensible defaults. Conversely, this also meant that extensive customizability was not a primary concern: the goal was to empower the users to start exploring their data quickly, rather than spend time making fine-grained adjustments to their figures. Third, to broaden its appeal, the package had to integrate seamlessly with existing tools within the R ecosystem. These included the popular RStudio [IDE] [@rstudio2024] and the RMarkdown document-authoring system [@xie2018].    
 
 ## User interface
 
 While ease of writing user code was a key consideration, equally important was the ease of interpreting and interacting with the resulting visualizations. The visual design of the figures needed to promote acquisition of statistical insights, and the figures' interactive behavior had to be clear and intuitive. Effective visual design is crucial, as poor design can make figures less legible or even misleading [see e.g. @tufte2001; @cairo2014; @cairo2019; @franconeri2021]. Similarly, the design of interactions can either enhance or hinder the acquisition of insights.
 
-A general rule I applied to the design of the user interface in my package was "less is more". Specifically, following Tufte's [-@tufte2001] example, I aimed to design figures that would prioritize data above all else. Visually, this was achieved by minimizing auxiliary graphical elements such as axis ticks, labels, and grid lines, and striving for a "pen and paper" aesthetic, as if the figures were drawn in a notebook. For color, I decided to use a muted colour palette for the non-data elements and an established color palette for representing data. Finally, when it came to interactive features, I approached those with similar minimalism as the visual design, trying to design them in a way that would enhance but not overwhelm the visual experience.  
+A general rule I applied to the design of the user interface in my package was "less is more". Specifically, following Tufte's [-@tufte2001] example, I aimed to design figures that would prioritize showing the data above all else. Visually, this was achieved by minimizing auxiliary graphical elements such as axis ticks, labels, and grid lines. I also tried to strive for a "pen and paper" aesthetic, as if the figures were drawn in a notebook. For color, I decided to use muted colours for non-data elements and an established color palette for representing the data. Finally, when it came to interactive features, I tried to approach those with similar degree of minimalism. I tried to avoid distracting interactive features such as having query tooltips appear on hover by default, and in general tried to design the user interactions in a way that would enhance but not overwhelm the visual experience.  
 
 ## Interactive features
 
-The next important question was which interactive features to support. As was discussed in Section \@ref(litreview), there are many interactive data visualization features, and some are more useful (for data exploration) than others. Furthmore, implementing the amount of effort required to implement these features also differs considerably. Therefore, choosing the right set of features to implement was a key design consideration.
+The next important question was which interactive features to support. As was discussed in Section \@ref(litreview), there are many interactive data visualization features, and some are more useful (for data exploration) than others. Furthmore, implementing the amount of effort required to implement these features also differs considerably. Therefore, choosing the right set of features to implement, and prioritizing between them, was a key design consideration.
 
-As was hinted at throughout Section \@ref(litreview), the key feature to implement was generalized linked selection or brushing. Specifically, every plot in `plotscaper` should both support and be able to respond to selection. This feature was highly desirable because it allows the user to quickly explore trends across various dynamically generated subsets of the data, making it one of the most useful tools in interactive data visualization [@buja1996; @heer2012; @wilhelm2003; @wilhelm2008; @wills2008; @ware2019; @ward2015]. However, this feature also required a significant amount of careful planning and programming effort, since, as was discussed in section \@ref(problems), it cannot be simply implemented on top of an existing static data visualization system. Instead, it has to be directly integrated into the data visualization pipeline.
+One of the core features to implement, as was hinted at throughout Section \@ref(litreview), was generalized linked selection or brushing. Specifically, every plot in `plotscaper` needed to support both dispatching and displaying selection events. This feature is highly desirable because it allows users to quickly explore trends across dynamically-generated subsets of their data, making it one of the most useful tools in the interactive data visualization arsenal [@buja1996; @heer2012; @wilhelm2003; @wilhelm2008; @wills2008; @ware2019; @ward2015]. However, it also requires a significant amount of careful planning and programming effort. Simply adding this functionality on top of an existing static data visualization system does not work, since naive solutions like replacing the entire plot upon selection produce unsatisfactory behavior. Adalbert Wilhelm describes this well in his chapter II.9 of the Data Visualization Handbook:
 
-Other features which were also highly desirable and required a significant effort to implement were parameter manipulation and representation switching. Like linked selection, these features also to be integrated into the data visualization pipeline.  
-
-
-> "It only works ﬁne when we have individual plot symbols for each observation, as in scatterplots for example, where some attributes are changed by the user interaction. But even when replacing plot parameters the user loses the possibility to compare the current plot with previous versions. The
+> "[Replacing the entire plot] only works ﬁne when we have individual plot symbols for each observation, as in scatterplots for example, where some attributes are changed by the user interaction. But even when replacing plot parameters the user loses the possibility to compare the current plot with previous versions. The
 user can only compare the current image with a mental copy of the previous image and hence the comparison might get distorted."
 >
 > [@wilhelm2008, pp. 210]
+
+Thus, linked selection had to be directly integrated into the data visualization pipeline. Developing the necessary infrastructure for supporting this feature in a general way was a key programming challenge and required significant time and effort.
+
+Other highly desirable features were parameter manipulation and representation switching. These features give the user the ability to quickly see alternative views of their data and discover trends that they may otherwise miss (see Sections \@ref(changing-representation)). Like linked selection, these feature required significant amount of effort and had to be integrated into the data visualization pipeline.
+
+Another interesting challenge was querying. When a user sees an interesting visual trend in their data, they may often be interested in the precise data values that produced that visual impression. Thus, being able to interactively query geometric objects, or call functions which return summaries of the data, is very useful. What complicates these features is that, often, we care directly about the visual attributes of the geometric objects, but the instead the statistics underlying those visual attributes. For instance, when querying a stacked barplot, we do not care about the stacked values, but instead about the values of the stacked segments. Thus, querying provided an intermediate level of complexity.
+
+Other interesting feature was bi-directional communication. The ability to call functions in an interactive session and have the figure respond directly can be invaluable in data exploration. However, it requires a specialized setup, such as having running server to respond to messages from the client. Thus, developing a system for communicating between the R client and the JavaScript "backend" (the figure) was necessary.
+
+Finally, there were some features which were also useful to have but also relatively simple to implement. Features such as changing size and alpha, and zooming and panning, could be easily implemented by manipulating scales and/or the visual attributes of the geometric objects. 
 
