--- a/references.bib
+++ b/references.bib
@@ -3677,3 +3677,66 @@
   year={2011},
   publisher={Public Library of Science San Francisco, USA}
 }
+
+@article{van2003,
+  title={Organization of visual areas in macaque and human cerebral cortex},
+  author={Van Essen, David C},
+  journal={The visual neurosciences},
+  volume={1},
+  pages={507--521},
+  year={2003},
+  publisher={MIT press}
+}
+
+@article{sheth2016,
+  title={Two visual pathways in primates based on sampling of space: exploitation and exploration of visual information},
+  author={Sheth, Bhavin R and Young, Ryan},
+  journal={Frontiers in integrative neuroscience},
+  volume={10},
+  pages={37},
+  year={2016},
+  publisher={Frontiers Media SA}
+}
+
+@article{ledoux2003,
+  title={The emotional brain, fear, and the amygdala},
+  author={LeDoux, Joseph},
+  journal={Cellular and molecular neurobiology},
+  volume={23},
+  pages={727--738},
+  year={2003},
+  publisher={Springer}
+}
+
+@article{ledoux2000,
+  title={Emotion circuits in the brain},
+  author={LeDoux, Joseph E},
+  journal={Annual review of neuroscience},
+  volume={23},
+  number={1},
+  pages={155--184},
+  year={2000},
+  publisher={Annual Reviews 4139 El Camino Way, PO Box 10139, Palo Alto, CA 94303-0139, USA}
+}
+
+@article{mandler1982,
+  title={Subitizing: an analysis of its component processes.},
+  author={Mandler, George and Shebo, Billie J},
+  journal={Journal of experimental psychology: general},
+  volume={111},
+  number={1},
+  pages={1},
+  year={1982},
+  publisher={American Psychological Association}
+}
+
+@article{treisman1985,
+  title={Preattentive processing in vision},
+  author={Treisman, Anne},
+  journal={Computer vision, graphics, and image processing},
+  volume={31},
+  number={2},
+  pages={156--177},
+  year={1985},
+  publisher={Elsevier}
+}
